--- a/info.yml
+++ b/info.yml
@@ -10,4 +10,4 @@ project:
     member1:
       name: Simon
       surname: Jovanovic
-      githubUsername: simonbjov
+      githubUsername: simonbpjov
